--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -141,7 +141,9 @@ ul {
     display: block;
   }
 }
-
+.radius {
+  border-radius: 20px;
+}
 /* Show top-links when it is toggled open on small screens */
 .top-links.active {
   display: flex !important;
